<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory android:title="@string/general">
        <ListPreference
            android:defaultValue="en"
            android:dialogTitle="@string/change_language"
            android:entries="@array/setting_language_entries"
            android:entryValues="@array/setting_language_values"
            android:key="@string/key_pref_language"
            android:summary="@string/pref_language_summary"
            android:title="@string/pref_language_title" />
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/notifications">
        <SwitchPreference
            app:defaultValue="true"
            android:key="@string/key_pref_release_reminder"
            android:title="@string/pref_release_title"
            android:summary="@string/pref_release_summary" />

        <SwitchPreference
            app:defaultValue="true"
            android:key="@string/key_pref_daily_reminder"
            android:title="@string/pref_daily_title"
            android:summary="@string/pref_daily_summary" />
    </PreferenceCategory>
</PreferenceScreen>